# FileZilla3

./: .gitignore  AUTHORS  CMakeLists.txt  CMakefile.txt  INSTALL  NEWS  README  configure.ac  wxMain.cpp
FileZilla3/tags/3.56.0/: NEWS
FileZilla3/tags/3.56.0/data/: install.nsi.in
FileZilla3/tags/3.56.0/locales/: de.po  fr.po  ja_JP.po
FileZilla3/trunk/: INSTALL  NEWS  README  configure.ac
FileZilla3/trunk/data/: Makefile.am  dylibcopy.sh  offer.nsh
FileZilla3/trunk/locales/: ar.po  co.po  da.po  de.po  fr.po  id_ID.po  it.po  ja_JP.po  pl_PL.po  ta.po  tr.po  uk_UA.po  vi_VN.po  zh_CN.po  zh_TW.po
FileZilla3/trunk/m4/: check_memfd_create.m4
FileZilla3/trunk/src/: Makefile.am
FileZilla3/trunk/src/commonui/: Makefile.am  buildinfo.cpp  cert_store.cpp  cert_store.h  commonui.vcxproj  filter.cpp  filter.h  fz_paths.cpp  fz_paths.h  options.cpp  options.h  remote_recursive_operation.h  site_manager.cpp  updater.cpp  updater.h  xml_cert_store.cpp  xml_file.cpp
FileZilla3/trunk/src/engine/: FileZillaEngine.cpp  Makefile.am  aio.cpp  commands.cpp  controlsocket.cpp  controlsocket.h  directorycache.h  directorylistingparser.cpp  directorylistingparser.h  engine.vcxproj  engine_context.cpp  engine_options.cpp  engineprivate.cpp  engineprivate.h  iothread.cpp  local_path.cpp  logging_private.h  lookup.h  misc.cpp  notification.cpp  oplock_manager.cpp  oplock_manager.h  option_change_event_handler.cpp  optionsbase.cpp  proxy.cpp  reader.cpp  server.cpp  servercapabilities.h  serverpath.cpp  sizeformatting_base.cpp  socket_errors.cpp  string_reader.cpp  version.cpp  writer.cpp
FileZilla3/trunk/src/include/: FileZillaEngine.h  activity_logger.h  aio.h  commands.h  directorylisting.h  engine_context.h  engine_options.h  libfilezilla_engine.h  local_path.h  misc.h  notification.h  option_change_event_handler.h  optionsbase.h  reader.h  server.h  (+4 more)
data/: dllcopy.sh  dylibcopy.sh  filezilla.appdata.xml  install.nsi.in
locales/: ar.po  bg_BG.po  co.po  da.po  de.po  el.po  fr.po  id_ID.po  it.po  ja_JP.po  nl.po  pl_PL.po  tr.po  uk_UA.po  vi_VN.po  zh_CN.po
m4/: fz_check_pugixml.m4
src/: CMakeLists.txt
src/CMake/: Default.cmake  DefaultCXX.cmake
src/commonui/: CMakeLists.txt  Makefile.am  buildinfo.h  cert_store.cpp  cert_store.h  chmod_data.cpp  commonui.vcxproj  fz_paths.cpp  ipcmutex.cpp  local_recursive_operation.cpp  login_manager.cpp  mac_fz_paths.mm  options.cpp  options.h  registry.cpp  remote_recursive_operation.cpp  site_manager.cpp  updater.cpp  updater.h  xml_cert_store.h  xml_file.cpp
src/engine/: CMakeLists.txt  FileZillaEngine.cpp  Makefile.am  aio.cpp  commands.cpp  controlsocket.cpp  controlsocket.h  directorycache.cpp  directorycache.h  directorylistingparser.cpp  engine.vcxproj  engine_context.cpp  engine_options.cpp  engineprivate.cpp  engineprivate.h  externalipresolver.cpp  logging.cpp  lookup.cpp  misc.cpp  oplock_manager.h  optionsbase.cpp  proxy.cpp  reader.cpp  server.cpp  servercapabilities.h  serverpath.cpp  string_reader.cpp  version.cpp  writer.cpp
src/engine/ftp/: CMakeLists.txt  filetransfer.cpp  filetransfer.h  ftpcontrolsocket.cpp  ftpcontrolsocket.h  list.cpp  logon.cpp  logon.h  rawtransfer.cpp  transfersocket.cpp  transfersocket.h
src/engine/http/: CMakeLists.txt  filetransfer.cpp  filetransfer.h  httpcontrolsocket.cpp  httpcontrolsocket.h  request.cpp  request.h
src/engine/sftp/: CMakeLists.txt  chmod.cpp  connect.cpp  connect.h  delete.cpp  event.h  filetransfer.cpp  filetransfer.h  input_thread.cpp  mkd.cpp  rmd.cpp  sftpcontrolsocket.cpp  sftpcontrolsocket.h
src/engine/storj/: CMakeLists.txt  connect.cpp  delete.cpp  file_transfer.cpp  file_transfer.h  input_thread.cpp  list.cpp  mkd.cpp  rmd.cpp  storjcontrolsocket.cpp  storjcontrolsocket.h
src/include/: FileZillaEngine.h  Makefile.am  activity_logger.h  aio.h  commands.h  directorylisting.h  engine_options.h  local_path.h  misc.h  notification.h  optionsbase.h  reader.h  server.h  serverpath.h  version.h  writer.h
src/interface/: CMakeLists.txt  FileZilla.cpp  LocalListView.cpp  LocalTreeView.cpp  LocalTreeView.h  Mainfrm.cpp  Mainfrm.h  Makefile.am  Options.cpp  Options.h  QueueView.cpp  QueueView.h  RemoteListView.cpp  RemoteTreeView.cpp  RemoteTreeView.h  StatusView.h  aboutdialog.cpp  asksavepassworddialog.cpp  asyncrequestqueue.cpp  asyncrequestqueue.h  auto_ascii_files.cpp  bookmarks_dialog.cpp  bookmarks_dialog.h  buildinfo.cpp  chmoddialog.cpp  chmoddialog.h  clearprivatedata.cpp  commandqueue.cpp  commandqueue.h  conditionaldialog.cpp  context_control.cpp  defaultfileexistsdlg.cpp  dialogex.cpp  dialogex.h  dndobjects.cpp  dndobjects.h  dropsource.cpp  dropsource.h  edithandler.cpp  edithandler.h  (+82 more)
src/interface/resources/: MacInfo.plist.in  Makefile.am
src/interface/resources/xrc/: dialogs.xrc  netconfwizard.xrc  settings.xrc  sitemanager.xrc  storj.xrc  update.xrc
src/interface/settings/: optionspage.cpp  optionspage.h  optionspage_connection.cpp  optionspage_connection.h  optionspage_connection_active.cpp  optionspage_connection_ftp.cpp  optionspage_connection_ftp.h  optionspage_connection_sftp.cpp  optionspage_dateformatting.cpp  optionspage_debug.cpp  optionspage_edit.cpp  optionspage_edit_associations.cpp  optionspage_fileexists.cpp  optionspage_filelists.cpp  optionspage_filetype.cpp  optionspage_ftpproxy.cpp  optionspage_passwords.cpp  optionspage_proxy.cpp  optionspage_sizeformatting.cpp  optionspage_themes.cpp  optionspage_transfer.cpp  optionspage_updatecheck.cpp  optionspage_updatecheck.h  settingsdialog.cpp
src/interface/wxext/: spinctrlex.cpp
src/pugixml/: CMakeLists.txt  pugiconfig.hpp
src/putty/: CMakeLists.txt  MERGEREVISION  Makefile.am  cmdgen.c  fzprintf.c  fzprintf.h  fzsftp.c  fzsftp.h  network.h  psftp.c  putty.h  puttyps.h  settings.c  sftp.c  ssh.c  ssh.h  ssh2kex-client.c  ssh2transport.c  ssh2userauth.c  stripctrl.c  utils.c
src/putty/unix/: unix.h  uxcons.c  uxnet.c  uxsftp.c
src/putty/windows/: winmisc.c  winsftp.c
src/storj/: events.hpp  fzstorj.cpp
tests/: Makefile.am  cmpnatural.cpp  dirparsertest.cpp
(+209 files in other folders)
