cmake_minimum_required(VERSION 3.22)
project(wxFileMan)

# set(CMAKE_CXX_STANDARD 14)

include_directories(src)


add_executable(wxFileMan
        src/commonui/auto_ascii_files.cpp
        src/commonui/auto_ascii_files.h
        src/commonui/buildinfo.cpp
        src/commonui/buildinfo.h
        src/commonui/cert_store.cpp
        src/commonui/cert_store.h
        src/commonui/chmod_data.cpp
        src/commonui/chmod_data.h
        src/commonui/file_utils.cpp
        src/commonui/file_utils.h
        src/commonui/filter.cpp
        src/commonui/filter.h
        src/commonui/fz_paths.cpp
        src/commonui/fz_paths.h
        src/commonui/fz_paths_osx.mm
        src/commonui/ipcmutex.cpp
        src/commonui/ipcmutex.h
        src/commonui/local_recursive_operation.cpp
        src/commonui/local_recursive_operation.h
        src/commonui/login_manager.cpp
        src/commonui/login_manager.h
        src/commonui/misc.cpp
        src/commonui/misc.h
        src/commonui/options.cpp
        src/commonui/options.h
        src/commonui/recursive_operation.h
        src/commonui/remote_recursive_operation.cpp
        src/commonui/remote_recursive_operation.h
        src/commonui/site.cpp
        src/commonui/site.h
        src/commonui/site_manager.cpp
        src/commonui/site_manager.h
        src/commonui/updater.cpp
        src/commonui/updater.h
        src/commonui/updater_cert.cpp
        src/commonui/updater_cert.h
        src/commonui/visibility.h
        src/commonui/xml_cert_store.cpp
        src/commonui/xml_cert_store.h
        src/commonui/xml_file.cpp
        src/commonui/xml_file.h
        src/dbus/dbushandler.cpp
        src/dbus/dbushandler.h
        src/dbus/desktop_notification.cpp
        src/dbus/desktop_notification.h
        src/dbus/power_management_inhibitor.cpp
        src/dbus/power_management_inhibitor.h
        src/dbus/session_manager.cpp
        src/dbus/session_manager.h
        src/dbus/wxdbusconnection.cpp
        src/dbus/wxdbusconnection.h
        src/dbus/wxdbusmessage.cpp
        src/dbus/wxdbusmessage.h
        src/engine/ftp/chmod.cpp
        src/engine/ftp/chmod.h
        src/engine/ftp/cwd.cpp
        src/engine/ftp/cwd.h
        src/engine/ftp/delete.cpp
        src/engine/ftp/delete.h
        src/engine/ftp/filetransfer.cpp
        src/engine/ftp/filetransfer.h
        src/engine/ftp/ftpcontrolsocket.cpp
        src/engine/ftp/ftpcontrolsocket.h
        src/engine/ftp/list.cpp
        src/engine/ftp/list.h
        src/engine/ftp/logon.cpp
        src/engine/ftp/logon.h
        src/engine/ftp/mkd.cpp
        src/engine/ftp/mkd.h
        src/engine/ftp/rawcommand.cpp
        src/engine/ftp/rawcommand.h
        src/engine/ftp/rawtransfer.cpp
        src/engine/ftp/rawtransfer.h
        src/engine/ftp/rename.cpp
        src/engine/ftp/rename.h
        src/engine/ftp/rmd.cpp
        src/engine/ftp/rmd.h
        src/engine/ftp/transfersocket.cpp
        src/engine/ftp/transfersocket.h
        src/engine/http/connect.h
        src/engine/http/digest.cpp
        src/engine/http/digest.h
        src/engine/http/filetransfer.cpp
        src/engine/http/filetransfer.h
        src/engine/http/httpcontrolsocket.cpp
        src/engine/http/httpcontrolsocket.h
        src/engine/http/internalconnect.cpp
        src/engine/http/internalconnect.h
        src/engine/http/request.cpp
        src/engine/http/request.h
        src/engine/sftp/chmod.cpp
        src/engine/sftp/chmod.h
        src/engine/sftp/connect.cpp
        src/engine/sftp/connect.h
        src/engine/sftp/cwd.cpp
        src/engine/sftp/cwd.h
        src/engine/sftp/delete.cpp
        src/engine/sftp/delete.h
        src/engine/sftp/event.h
        src/engine/sftp/filetransfer.cpp
        src/engine/sftp/filetransfer.h
        src/engine/sftp/input_parser.cpp
        src/engine/sftp/input_parser.h
        src/engine/sftp/list.cpp
        src/engine/sftp/list.h
        src/engine/sftp/mkd.cpp
        src/engine/sftp/mkd.h
        src/engine/sftp/rename.cpp
        src/engine/sftp/rename.h
        src/engine/sftp/rmd.cpp
        src/engine/sftp/rmd.h
        src/engine/sftp/sftpcontrolsocket.cpp
        src/engine/sftp/sftpcontrolsocket.h
        src/engine/storj/connect.cpp
        src/engine/storj/connect.h
        src/engine/storj/delete.cpp
        src/engine/storj/delete.h
        src/engine/storj/event.h
        src/engine/storj/file_transfer.cpp
        src/engine/storj/file_transfer.h
        src/engine/storj/input_thread.cpp
        src/engine/storj/input_thread.h
        src/engine/storj/list.cpp
        src/engine/storj/list.h
        src/engine/storj/mkd.cpp
        src/engine/storj/mkd.h
        src/engine/storj/rmd.cpp
        src/engine/storj/rmd.h
        src/engine/storj/storjcontrolsocket.cpp
        src/engine/storj/storjcontrolsocket.h
        src/engine/activity_logger.cpp
        src/engine/activity_logger_layer.cpp
        src/engine/activity_logger_layer.h
        src/engine/commands.cpp
        src/engine/controlsocket.cpp
        src/engine/controlsocket.h
        src/engine/directorycache.cpp
        src/engine/directorycache.h
        src/engine/directorylisting.cpp
        src/engine/directorylistingparser.cpp
        src/engine/directorylistingparser.h
        src/engine/engine_context.cpp
        src/engine/engine_options.cpp
        src/engine/engineprivate.cpp
        src/engine/engineprivate.h
        src/engine/externalipresolver.cpp
        src/engine/filezilla.h
        src/engine/FileZillaEngine.cpp
        src/engine/local_path.cpp
        src/engine/logging.cpp
        src/engine/logging_private.h
        src/engine/lookup.cpp
        src/engine/lookup.h
        src/engine/misc.cpp
        src/engine/notification.cpp
        src/engine/oplock_manager.cpp
        src/engine/oplock_manager.h
        src/engine/optionsbase.cpp
        src/engine/pathcache.cpp
        src/engine/pathcache.h
        src/engine/proxy.cpp
        src/engine/proxy.h
        src/engine/rtt.cpp
        src/engine/rtt.h
        src/engine/server.cpp
        src/engine/servercapabilities.cpp
        src/engine/servercapabilities.h
        src/engine/serverpath.cpp
        src/engine/sizeformatting_base.cpp
        src/engine/tls.cpp
        src/engine/tls.h
        src/engine/version.cpp
        src/engine/xmlutils.cpp
        src/fzshellext/resource.h
        src/fzshellext/shellext.cpp
        src/fzshellext/shellext.h
        src/include/activity_logger.h
        src/include/commands.h
        src/include/directorylisting.h
        src/include/engine_context.h
        src/include/engine_options.h
        src/include/externalipresolver.h
        src/include/FileZillaEngine.h
        src/include/httpheaders.h
        src/include/libfilezilla_engine.h
        src/include/local_path.h
        src/include/logging.h
        src/include/misc.h
        src/include/notification.h
        src/include/optionsbase.h
        src/include/s3sse.h
        src/include/server.h
        src/include/serverpath.h
        src/include/setup.h
        src/include/sizeformatting_base.h
        src/include/version.h
        src/include/visibility.h
        src/include/xml_string_writer.h
        src/include/xmlutils.h
        src/interface/settings/optionspage.cpp
        src/interface/settings/optionspage.h
        src/interface/settings/optionspage_connection.cpp
        src/interface/settings/optionspage_connection.h
        src/interface/settings/optionspage_connection_active.cpp
        src/interface/settings/optionspage_connection_active.h
        src/interface/settings/optionspage_connection_ftp.cpp
        src/interface/settings/optionspage_connection_ftp.h
        src/interface/settings/optionspage_connection_passive.cpp
        src/interface/settings/optionspage_connection_passive.h
        src/interface/settings/optionspage_connection_sftp.cpp
        src/interface/settings/optionspage_connection_sftp.h
        src/interface/settings/optionspage_dateformatting.cpp
        src/interface/settings/optionspage_dateformatting.h
        src/interface/settings/optionspage_debug.cpp
        src/interface/settings/optionspage_debug.h
        src/interface/settings/optionspage_edit.cpp
        src/interface/settings/optionspage_edit.h
        src/interface/settings/optionspage_edit_associations.cpp
        src/interface/settings/optionspage_edit_associations.h
        src/interface/settings/optionspage_fileexists.cpp
        src/interface/settings/optionspage_fileexists.h
        src/interface/settings/optionspage_filelists.cpp
        src/interface/settings/optionspage_filelists.h
        src/interface/settings/optionspage_filetype.cpp
        src/interface/settings/optionspage_filetype.h
        src/interface/settings/optionspage_ftpproxy.cpp
        src/interface/settings/optionspage_ftpproxy.h
        src/interface/settings/optionspage_interface.cpp
        src/interface/settings/optionspage_interface.h
        src/interface/settings/optionspage_language.cpp
        src/interface/settings/optionspage_language.h
        src/interface/settings/optionspage_logging.cpp
        src/interface/settings/optionspage_logging.h
        src/interface/settings/optionspage_passwords.cpp
        src/interface/settings/optionspage_passwords.h
        src/interface/settings/optionspage_proxy.cpp
        src/interface/settings/optionspage_proxy.h
        src/interface/settings/optionspage_sizeformatting.cpp
        src/interface/settings/optionspage_sizeformatting.h
        src/interface/settings/optionspage_themes.cpp
        src/interface/settings/optionspage_themes.h
        src/interface/settings/optionspage_transfer.cpp
        src/interface/settings/optionspage_transfer.h
        src/interface/settings/optionspage_updatecheck.cpp
        src/interface/settings/optionspage_updatecheck.h
        src/interface/settings/settingsdialog.cpp
        src/interface/settings/settingsdialog.h
        src/interface/wxext/spinctrlex.cpp
        src/interface/wxext/spinctrlex.h
        src/interface/aboutdialog.cpp
        src/interface/aboutdialog.h
        src/interface/asksavepassworddialog.cpp
        src/interface/asksavepassworddialog.h
        src/interface/asyncrequestqueue.cpp
        src/interface/asyncrequestqueue.h
        src/interface/aui_notebook_ex.cpp
        src/interface/aui_notebook_ex.h
        src/interface/bookmarks_dialog.cpp
        src/interface/bookmarks_dialog.h
        src/interface/buildinfo.cpp
        src/interface/buildinfo.h
        src/interface/chmoddialog.cpp
        src/interface/chmoddialog.h
        src/interface/clearprivatedata.cpp
        src/interface/clearprivatedata.h
        src/interface/cmdline.cpp
        src/interface/cmdline.h
        src/interface/commandqueue.cpp
        src/interface/commandqueue.h
        src/interface/conditionaldialog.cpp
        src/interface/conditionaldialog.h
        src/interface/context_control.cpp
        src/interface/context_control.h
        src/interface/customheightlistctrl.cpp
        src/interface/customheightlistctrl.h
        src/interface/defaultfileexistsdlg.cpp
        src/interface/defaultfileexistsdlg.h
        src/interface/dialogex.cpp
        src/interface/dialogex.h
        src/interface/dndobjects.cpp
        src/interface/dndobjects.h
        src/interface/dragdropmanager.cpp
        src/interface/dragdropmanager.h
        src/interface/drop_target_ex.cpp
        src/interface/drop_target_ex.h
        src/interface/dropsource.cpp
        src/interface/dropsource.h
        src/interface/dropsource_mac.mm
        src/interface/edithandler.cpp
        src/interface/edithandler.h
        src/interface/encoding_converter.cpp
        src/interface/encoding_converter.h
        src/interface/export.cpp
        src/interface/export.h
        src/interface/file_utils.cpp
        src/interface/file_utils.h
        src/interface/fileexistsdlg.cpp
        src/interface/fileexistsdlg.h
        src/interface/filelist_statusbar.cpp
        src/interface/filelist_statusbar.h
        src/interface/filelistctrl.cpp
        src/interface/filelistctrl.h
        src/interface/FileZilla.cpp
        src/interface/filezilla.h
        src/interface/filezillaapp.h
        src/interface/filter_conditions_dialog.cpp
        src/interface/filter_conditions_dialog.h
        src/interface/filter_manager.cpp
        src/interface/filter_manager.h
        src/interface/filteredit.cpp
        src/interface/filteredit.h
        src/interface/fzputtygen_interface.cpp
        src/interface/fzputtygen_interface.h
        src/interface/graphics.cpp
        src/interface/graphics.h
        src/interface/import.cpp
        src/interface/import.h
        src/interface/infotext.cpp
        src/interface/infotext.h
        src/interface/inputdialog.cpp
        src/interface/inputdialog.h
        src/interface/led.cpp
        src/interface/led.h
        src/interface/list_search_panel.cpp
        src/interface/list_search_panel.h
        src/interface/listctrlex.cpp
        src/interface/listctrlex.h
        src/interface/listingcomparison.cpp
        src/interface/listingcomparison.h
        src/interface/local_recursive_operation.cpp
        src/interface/local_recursive_operation.h
        src/interface/locale_initializer.cpp
        src/interface/locale_initializer.h
        src/interface/LocalListView.cpp
        src/interface/LocalListView.h
        src/interface/LocalTreeView.cpp
        src/interface/LocalTreeView.h
        src/interface/loginmanager.cpp
        src/interface/loginmanager.h
        src/interface/Mainfrm.cpp
        src/interface/Mainfrm.h
        src/interface/manual_transfer.cpp
        src/interface/manual_transfer.h
        src/interface/menu_bar.cpp
        src/interface/menu_bar.h
        src/interface/msgbox.cpp
        src/interface/msgbox.h
        src/interface/netconfwizard.cpp
        src/interface/netconfwizard.h
        src/interface/option_change_event_handler.cpp
        src/interface/option_change_event_handler.h
        src/interface/Options.cpp
        src/interface/Options.h
        src/interface/osx_sandbox_userdirs.cpp
        src/interface/osx_sandbox_userdirs.h
        src/interface/overlay.cpp
        src/interface/overlay.h
        src/interface/power_management.cpp
        src/interface/power_management.h
        src/interface/power_management_osx.mm
        src/interface/queue.cpp
        src/interface/queue.h
        src/interface/queue_storage.cpp
        src/interface/queue_storage.h
        src/interface/QueueView.cpp
        src/interface/QueueView.h
        src/interface/queueview_failed.cpp
        src/interface/queueview_failed.h
        src/interface/queueview_successful.cpp
        src/interface/queueview_successful.h
        src/interface/quickconnectbar.cpp
        src/interface/quickconnectbar.h
        src/interface/recentserverlist.cpp
        src/interface/recentserverlist.h
        src/interface/recursive_operation_status.cpp
        src/interface/recursive_operation_status.h
        src/interface/remote_recursive_operation.cpp
        src/interface/remote_recursive_operation.h
        src/interface/RemoteListView.cpp
        src/interface/RemoteListView.h
        src/interface/RemoteTreeView.cpp
        src/interface/RemoteTreeView.h
        src/interface/renderer.cpp
        src/interface/renderer.h
        src/interface/search.cpp
        src/interface/search.h
        src/interface/serverdata.cpp
        src/interface/serverdata.h
        src/interface/sftp_crypt_info_dlg.cpp
        src/interface/sftp_crypt_info_dlg.h
        src/interface/sitemanager.cpp
        src/interface/sitemanager.h
        src/interface/sitemanager_controls.cpp
        src/interface/sitemanager_controls.h
        src/interface/sitemanager_dialog.cpp
        src/interface/sitemanager_dialog.h
        src/interface/sitemanager_site.cpp
        src/interface/sitemanager_site.h
        src/interface/sizeformatting.cpp
        src/interface/sizeformatting.h
        src/interface/speedlimits_dialog.cpp
        src/interface/speedlimits_dialog.h
        src/interface/splitter.cpp
        src/interface/splitter.h
        src/interface/state.cpp
        src/interface/state.h
        src/interface/statusbar.cpp
        src/interface/statusbar.h
        src/interface/statuslinectrl.cpp
        src/interface/statuslinectrl.h
        src/interface/StatusView.cpp
        src/interface/StatusView.h
        src/interface/storj_key_interface.cpp
        src/interface/storj_key_interface.h
        src/interface/systemimagelist.cpp
        src/interface/systemimagelist.h
        src/interface/textctrlex.cpp
        src/interface/textctrlex.h
        src/interface/themeprovider.cpp
        src/interface/themeprovider.h
        src/interface/timeformatting.cpp
        src/interface/timeformatting.h
        src/interface/toolbar.cpp
        src/interface/toolbar.h
        src/interface/toolbar.mm
        src/interface/treectrlex.cpp
        src/interface/treectrlex.h
        src/interface/update_dialog.cpp
        src/interface/update_dialog.h
        src/interface/verifycertdialog.cpp
        src/interface/verifycertdialog.h
        src/interface/verifyhostkeydialog.cpp
        src/interface/verifyhostkeydialog.h
        src/interface/view.cpp
        src/interface/view.h
        src/interface/viewheader.cpp
        src/interface/viewheader.h
        src/interface/volume_enumerator.cpp
        src/interface/volume_enumerator.h
        src/interface/welcome_dialog.cpp
        src/interface/welcome_dialog.h
        src/interface/window_state_manager.cpp
        src/interface/window_state_manager.h
        src/interface/wrapengine.cpp
        src/interface/wrapengine.h
        src/interface/wxfilesystem_blob_handler.cpp
        src/interface/wxfilesystem_blob_handler.h
        src/interface/xh_text_ex.cpp
        src/interface/xh_text_ex.h
        src/interface/xmlfunctions.cpp
        src/interface/xmlfunctions.h
        src/interface/xrc_helper.cpp
        src/interface/xrc_helper.h
        src/pugixml/pugiconfig.hpp
        src/pugixml/pugixml.cpp
        src/pugixml/pugixml.hpp
        src/putty/unix/unix.h
        src/putty/unix/uxagentc.c
        src/putty/unix/uxcliloop.c
        src/putty/unix/uxcons.c
        src/putty/unix/uxmisc.c
        src/putty/unix/uxnet.c
        src/putty/unix/uxnoise.c
        src/putty/unix/uxpeer.c
        src/putty/unix/uxpoll.c
        src/putty/unix/uxsel.c
        src/putty/unix/uxsftp.c
        src/putty/unix/uxstore.c
        src/putty/unix/uxutils.c
        src/putty/unix/uxutils.h
        src/putty/windows/rcstuff.h
        src/putty/windows/wincapi.c
        src/putty/windows/wincapi.h
        src/putty/windows/wincliloop.c
        src/putty/windows/wincons.c
        src/putty/windows/windefs.c
        src/putty/windows/winhandl.c
        src/putty/windows/winhsock.c
        src/putty/windows/winmisc.c
        src/putty/windows/winmiscs.c
        src/putty/windows/winnet.c
        src/putty/windows/winnohlp.c
        src/putty/windows/winnoise.c
        src/putty/windows/winnojmp.c
        src/putty/windows/winnpc.c
        src/putty/windows/winnps.c
        src/putty/windows/winpgntc.c
        src/putty/windows/winsecur.c
        src/putty/windows/winsecur.h
        src/putty/windows/winselcli.c
        src/putty/windows/winsftp.c
        src/putty/windows/winstore.c
        src/putty/windows/winstuff.h
        src/putty/windows/wintime.c
        src/putty/windows/winucs.c
        src/putty/be_misc.c
        src/putty/be_ssh.c
        src/putty/callback.c
        src/putty/charset.h
        src/putty/clicons.c
        src/putty/cmdgen.c
        src/putty/cmdline.c
        src/putty/conf.c
        src/putty/console.c
        src/putty/cproxy.c
        src/putty/defs.h
        src/putty/ecc.c
        src/putty/ecc.h
        src/putty/errsock.c
        src/putty/fzprintf.c
        src/putty/fzprintf.h
        src/putty/fzsftp.c
        src/putty/fzsftp.h
        src/putty/import.c
        src/putty/logging.c
        src/putty/mainchan.c
        src/putty/marshal.c
        src/putty/marshal.h
        src/putty/memory.c
        src/putty/misc.c
        src/putty/misc.h
        src/putty/mpint.c
        src/putty/mpint.h
        src/putty/mpint_i.h
        src/putty/network.h
        src/putty/noprint.c
        src/putty/noshare.c
        src/putty/noterm.c
        src/putty/notiming.c
        src/putty/nullplug.c
        src/putty/pageant.h
        src/putty/pinger.c
        src/putty/portfwd.c
        src/putty/pproxy.c
        src/putty/proxy.c
        src/putty/proxy.h
        src/putty/psftp.c
        src/putty/psftp.h
        src/putty/putty.h
        src/putty/puttymem.h
        src/putty/puttyps.h
        src/putty/settings.c
        src/putty/sftp.c
        src/putty/sftp.h
        src/putty/sftpcommon.c
        src/putty/ssh.c
        src/putty/ssh.h
        src/putty/ssh2bpp.c
        src/putty/ssh2censor.c
        src/putty/ssh2connection-client.c
        src/putty/ssh2connection.c
        src/putty/ssh2connection.h
        src/putty/ssh2kex-client.c
        src/putty/ssh2transhk.c
        src/putty/ssh2transport.c
        src/putty/ssh2transport.h
        src/putty/ssh2userauth.c
        src/putty/sshaes.c
        src/putty/ssharcf.c
        src/putty/sshargon2.c
        src/putty/sshauxcrypt.c
        src/putty/sshbcrypt.c
        src/putty/sshblake2.c
        src/putty/sshblowf.c
        src/putty/sshblowf.h
        src/putty/sshbpp.h
        src/putty/sshccp.c
        src/putty/sshchan.h
        src/putty/sshcommon.c
        src/putty/sshcr.h
        src/putty/sshcrc.c
        src/putty/sshcrcda.c
        src/putty/sshdes.c
        src/putty/sshdh.c
        src/putty/sshdss.c
        src/putty/sshdssg.c
        src/putty/sshecc.c
        src/putty/sshecdsag.c
        src/putty/sshgssc.c
        src/putty/sshgssc.h
        src/putty/sshhmac.c
        src/putty/sshkeygen.h
        src/putty/sshmac.c
        src/putty/sshmd5.c
        src/putty/sshnogss.c
        src/putty/sshppl.h
        src/putty/sshprime.c
        src/putty/sshprng.c
        src/putty/sshpubk.c
        src/putty/sshrand.c
        src/putty/sshrsa.c
        src/putty/sshrsag.c
        src/putty/sshserver.h
        src/putty/sshsh256.c
        src/putty/sshsh512.c
        src/putty/sshsha.c
        src/putty/sshsha3.c
        src/putty/sshshare.c
        src/putty/sshsignals.h
        src/putty/sshttymodes.h
        src/putty/sshutils.c
        src/putty/sshverstring.c
        src/putty/sshzlib.c
        src/putty/storage.h
        src/putty/stripctrl.c
        src/putty/terminal.h
        src/putty/time.c
        src/putty/timing.c
        src/putty/tree234.c
        src/putty/tree234.h
        src/putty/utils.c
        src/putty/version.c
        src/putty/wcwidth.c
        src/putty/wildcard.c
        src/putty/x11fwd.c
        src/storj/events.hpp
        src/storj/fzstorj.cpp)
